# bettercap

./: .deepsource.toml  .gitattributes  .gitignore  .gitmodules  .travis.yml  CHANGES.md  Dockerfile  Dockerfile.arm64  Gopkg.toml  ISSUE_TEMPLATE.md  Jenkinsfile  LICENSE.md  Makefile  README.md  README_GRUPO_1.md  SECURITY.md  bettercap.service  build.bat  build.sh  build_arm.sh  build_linux.sh  build_mac.sh  build_macos.sh  build_win.sh  changelog.sh  epson.yml  epson_xp630.yml  example.js  external_responder.yml  firewall_coverage.out  glide.yaml  go.mod  go.sum  graphpage.html  main.go  main_test.go  new_release.sh  openwrt.makefile  printer.yml  printer2.yml  (+8 more)
.github/: FUNDING.yml  dependabot.yml
.github/workflows/: go.yml  (+10 more)
_example/: config.example.js  example.js  functions.js  telegram.js
builder/: arm_builder.sh  libusb.pc
caplets/: active_recon.cap  airmon.cap  airodump.cap  ap-config.cap  ap.cap  beef-active.cap  beef-inject.js  beef-passive.cap  beef_active.cap  beef_passive.cap  caplet.go  caplet_test.go  doc.go  env.go  env_test.go  fb-phish.cap  fb-phish.js  http-req-dump.cap  http-req-dump.js  local-sniffer.cap  login-man-abuse.cap  login-man-abuse.js  login-man-abuser.js  manager.go  manager_test.go  mitm6.cap  netmon.cap  passive_recon.cap  proxy-script-test.cap  proxy-script-test.js  recon-active.cap  recon-passive.cap  rest-api.cap  simple-passwords-sniffer.cap  spoof_n_sniff_passwords.cap  stsoy.cap  test-prompt-stats.cap  web-override.cap  web-override.js  wpa_handshake.cap
core/: banner.go  banner_test.go  build.go  core.go  core_android.go  core_test.go  core_unix.go  core_windows.go  doc.go  options.go  swag.go  swag_test.go  table.go  table_test.go
firewall/: doc.go  firewall.go  firewall_darwin.go  firewall_linux.go  firewall_windows.go  redirection.go  redirection_test.go
hooks/: post_checkout
js/: crypto.go  data.go  data_test.go  fs.go  fs_test.go  http.go  init.go  log.go  random.go  random_test.go
libpcap-1.8.1/: CHANGES  CMakeLists.txt  CREDITS  GenVersion.bat  INSTALL.txt  Makefile  Makefile.in  README  README.macosx  README.septel  README.sita  aclocal.m4  bpf_dump.c  bpf_filter.c  bpf_image.c  chmod_bpf  cmakeconfig.h.in  config.h  config.h.in  config.status  configure  configure.ac  dlpisubs.c  etherent.c  extract.h  fad-getad.c  fad-gifc.c  fad-glifc.c  fad-helpers.c  gen_version_c.sh  gen_version_header.sh  gencode.c  gencode.h  grammar.c  grammar.h  grammar.y  ieee80211.h  inet.c  libpcap.so.1.8.1  nametoaddr.c  (+91 more)
libpcap-1.8.1/SUNOS4/: nit_if.o.sun4c.4.0.3c
libpcap-1.8.1/Win32/Include/: Gnuc.h
libpcap-1.8.1/Win32/Include/net/: if.h
libpcap-1.8.1/Win32/Prj/: wpcap.vcxproj  wpcap.vcxproj.filters
libpcap-1.8.1/bpf/net/: bpf_filter.c
libpcap-1.8.1/cmake/: preconfigure.cmake
libpcap-1.8.1/missing/: getopt.c  getopt.h  strtok_r.c
libpcap-1.8.1/msdos/: common.dj  makefile  makefile.dj  makefile.wc  ndis2.c  ndis2.h  ndis_0.asm
libpcap-1.8.1/pcap/: bluetooth.h  bpf.h  can_socketcan.h  dlt.h  export-defs.h  namedb.h  nflog.h  pcap.h  sll.h  usb.h  vlan.h
libpcap-1.8.1/tests/: CMakeLists.txt  can_set_rfmon_test.c  capturetest.c  filtertest.c  findalldevstest.c  opentest.c  reactivatetest.c  selpolltest.c  valgrindtest.c
log/: doc.go  log.go  log_test.go
modules/: any_proxy.go  api_rest.go  api_rest_controller.go  api_rest_routes.go  api_rest_security.go  api_rest_utils.go  api_rest_ws.go  arp_spoof.go  base_proxy_script.go  ble_options_darwin.go  ble_options_linux.go  ble_recon.go  ble_recon_events.go  ble_recon_sort.go  ble_recon_view.go  ble_recon_windows.go  ble_unsupported.go  caplets.go  custom_http_proxy.go  custom_proxy_base.go  dhcp6_spoof.go  dns_spoof.go  dns_spoof_hosts.go  doc.go  events_ignore_list.go  events_stream.go  events_view.go  events_view_ble.go  events_view_ble_unsupported.go  events_view_ble_windows.go  events_view_http.go  events_view_wifi.go  gps.go  http_proxy.go  http_proxy_base.go  http_proxy_base_cookietracker.go  http_proxy_base_filters.go  http_proxy_base_hosttracker.go  http_proxy_base_sslstriper.go  http_proxy_cert_cache.go  (+76 more)
net/: arp.go  arp_parser_darwin.go  arp_parser_linux.go  arp_parser_windows.go  arp_unix.go  doc.go  endpoint.go  net.go  net_darwin.go  net_linux.go  net_windows.go  oui.go  oui_compiled.go
network/: aliases.go  aliases_test.go  arp.go  arp_parser_darwin.go  arp_parser_linux.go  arp_parser_windows.go  ble.go  ble_characteristics.go  ble_companies.go  ble_device.go  ble_device_windows.go  ble_services.go  ble_unsupported.go  ble_windows.go  can.go  can_device.go  corewlan_bridge.m  debug.go  doc.go  endpoint.go  hid.go  hid_device.go  lan.go  lan_endpoint.go  lan_test.go  make_ble.py  make_manuf.py  make_oui.py  manuf  manuf.go  manuf.go.template  meta.go  meta_test.go  net.go  net_darwin.go  net_darwin.m  net_gateway.go  net_gateway_android.go  net_gateway_windows.go  net_linux.go  (+15 more)
packets/: arp.go  arp_test.go  dhcp6.go  dhcp6_layer.go  dhcp6_layer_test.go  dhcp6_test.go  doc.go  dot11.go  dot11_test.go  dot11_types.go  dot11_types_test.go  dot11_wps.go  dot11_wps_attrs.go  icmp6.go  icmp6_test.go  krb5.go  krb5_test.go  mdns.go  mdns_test.go  mysql.go  mysql_test.go  nbns.go  nbns_test.go  ntlm.go  ntlm_test.go  queue.go  queue_test.go  serialize.go  serialize_test.go  tcp.go  tcp_test.go  teamviewer.go  udp.go  udp_test.go  upnp.go  wsd.go
routing/: route.go  route_test.go  tables.go  tables_test.go  update_darwin.go  update_linux.go  update_windows.go
session/: caplet.go  command_handler.go  command_handler_test.go  doc.go  environment.go  environment_test.go  events.go  events_ignore_list.go  events_test.go  module.go  module_handler.go  module_handler_test.go  module_param.go  module_param_test.go  prompt.go  script.go  script_builtin.go  script_builtin_runtime.go  session.go  session_completers.go  session_core_handlers.go  session_json.go  session_parse.go  session_routing.go  session_setup.go  session_setup_test.go  session_test.go  targets.go  targets_view.go
tls/: cert.go  doc.go  sign.go  tls_test.go
zeroconf/: server.go  service.go
(+303 files in other folders)
